@@ -1,3 +1,5 @@
+ADD: allow to use PostgreSQL based DB instead of MySQL based DB (#256)
+
 1.20.0
 
 ADD: allow to add and remove just one user to expiration password black list (#251)
